--- a/stable/etcd-operator/templates/backup-operator-service-account.yaml
+++ b/stable/etcd-operator/templates/backup-operator-service-account.yaml
@@ -1,13 +1,12 @@
-{{- if and (.Values.rbac.install) .Values.deployments.backupOperator }}
+{{- if and .Values.rbac.create .Values.deployments.backupOperator }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "etcd-backup-operator.fullname" . }}
+  name: {{ .Values.rbac.backupOperatorServiceAccountName }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: {{ template "etcd-backup-operator.fullname" . }}
+    app: {{ template "etcd-backup-operator.name" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-    component: "{{ .Release.Name }}-{{ .Values.component }}"
 {{- end }}
