--- a/stable/etcd-operator/templates/operator-cluster-role.yaml
+++ b/stable/etcd-operator/templates/operator-cluster-role.yaml
@@ -1,15 +1,14 @@
-{{- if .Values.rbac.install }}
+{{- if .Values.rbac.create }}
 ---
-apiVersion: rbac.authorization.k8s.io/{{ required "A valid .Values.rbac.apiVersion entry required!" .Values.rbac.apiVersion }}
+apiVersion: rbac.authorization.k8s.io/{{ .Values.rbac.apiVersion }}
 kind: ClusterRole
 metadata:
   name: {{ template "etcd-operator.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: {{ template "etcd-operator.fullname" . }}
+    app: {{ template "etcd-operator.name" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-    component: "{{ .Release.Name }}-{{ .Values.component }}"
 rules:
 - apiGroups:
   - etcd.database.coreos.com
