--- a/stable/etcd-operator/templates/backup-etcd-crd.yaml
+++ b/stable/etcd-operator/templates/backup-etcd-crd.yaml
@@ -6,10 +6,9 @@ metadata:
   name: {{ template "etcd-backup-operator.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: {{ template "etcd-backup-operator.fullname" . }}
+    app: {{ template "etcd-backup-operator.name" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-    component: "{{ .Release.Name }}-{{ .Values.component }}"
 
 spec:
   clusterName: {{ .Values.etcdCluster.name }}
