--- a/stable/etcd-operator/templates/backup-operator-clusterrole-binding.yaml
+++ b/stable/etcd-operator/templates/backup-operator-clusterrole-binding.yaml
@@ -1,18 +1,17 @@
-{{- if and .Values.rbac.install .Values.deployments.backupOperator }}
+{{- if and .Values.rbac.create .Values.deployments.backupOperator }}
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/{{ required "A valid .Values.rbac.apiVersion entry required!" .Values.rbac.apiVersion }}
+apiVersion: rbac.authorization.k8s.io/{{ .Values.rbac.apiVersion }}
 metadata:
   name: {{ template "etcd-backup-operator.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: {{ template "etcd-operator.fullname" . }}
+    app: {{ template "etcd-operator.name" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-    component: "{{ .Release.Name }}-{{ .Values.component }}"
 subjects:
 - kind: ServiceAccount
-  name: {{ template "etcd-backup-operator.fullname" . }}
+  name: {{ .Values.rbac.backupOperatorServiceAccountName }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
