--- a/incubator/keycloak/templates/configmap.yaml
+++ b/incubator/keycloak/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{- $highAvailability := gt (int .Values.keycloak.replicas) 1 -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -43,13 +44,13 @@ data:
 
     /opt/jboss/keycloak/bin/jboss-cli.sh --file=/scripts/keycloak.cli
 
-    args=(-b 0.0.0.0{{ if .Values.keycloak.discovery }} --server-config standalone-ha.xml{{ end }})
+    args=(-b 0.0.0.0{{ if $highAvailability }} --server-config standalone-ha.xml{{ end }})
 
     exec /opt/jboss/docker-entrypoint.sh "${args[@]}"
     exit "$?"
 
   keycloak.cli: |
-    embed-server{{ if .Values.keycloak.discovery }} --server-config=standalone-ha.xml{{ end }} --std-out=echo
+    embed-server{{ if $highAvailability }} --server-config=standalone-ha.xml{{ end }} --std-out=echo
 
 {{- $cli := .Values.keycloak.cli }}
 
@@ -59,7 +60,7 @@ data:
 
 {{ $cli.reverseProxy | indent 4 }}
 
-{{- if .Values.keycloak.discovery }}
+{{- if $highAvailability }}
 {{ $cli.discovery | indent 4 }}
 {{- end }}
 
