Better resource management for Artifactory (#1)
* Update Artifactory version
* Add resources requests and limits to all pods
* Ability to set whitelist on Nginx LoadBalancer service
* Support setting a custom artifactory service name (that will also be set in nginx config)
* Add new parameters to README
* Fix artifactory replicas reference. Hardcode database replicas to 1
* Use resource memory requests and limits in Artifactory java options
* Add readinessProbe to Artifactory
* Add readme on creating a Kubernetes Docker registry secret and passing it to helm

--- a/stable/artifactory/values.yaml
+++ b/stable/artifactory/values.yaml
@@ -5,12 +5,14 @@
 # Access the values with {{ .Values.key.subkey }}
 
 # Common
-initContainerImage: "busybox:1.26.2"
+initContainerImage: "alpine:3.6"
+
+# For supporting pulling from private registries
+imagePullSecrets:
 
 # Database
 database:
   name: postgresql
-  replicaCount: 1
   env:
     type: postgresql
     name: artifactory
@@ -37,6 +39,13 @@ database:
     ##   GKE, AWS & OpenStack)
     ##
     # storageClass: "-"
+  resources:
+    requests:
+      memory: "512Mi"
+      cpu: "100m"
+    limits:
+      memory: "1Gi"
+      cpu: "500m"
 
 # Artifactory
 artifactory:
@@ -45,9 +54,10 @@ artifactory:
   image:
     # repository: "docker.bintray.io/jfrog/artifactory-oss"
     repository: "docker.bintray.io/jfrog/artifactory-pro"
-    version: 5.5.2
+    version: 5.6.2
     pullPolicy: IfNotPresent
   service:
+    name: artifactory
     type: ClusterIP
   externalPort: 8081
   internalPort: 8081
@@ -64,6 +74,17 @@ artifactory:
     ##   GKE, AWS & OpenStack)
     ##
     # storageClass: "-"
+  resources:
+    requests:
+      # Leave as plain numbers. Giga byte only!
+      # They are being used in multiple string formats by Artifactory deployment
+      memory: "2"
+      cpu: "500m"
+    limits:
+      # Leave as plain numbers. Giga byte only!
+      # They are being used in multiple string formats by Artifactory deployment
+      memory: "4"
+      cpu: "2"
 
 # Nginx
 nginx:
@@ -76,6 +97,12 @@ nginx:
   service:
     ## For minikube, set this to NodePort, elsewhere use LoadBalancer
     type: LoadBalancer
+    ## For supporting whitelist on the Nginx LoadBalancer service
+    ## Set this to a list of IP CIDR ranges
+    ## Example: loadBalancerSourceRanges: ['10.10.10.5/32', '10.11.10.5/32']
+    ## or pass from helm command line
+    ## Example: helm install ... --set nginx.service.loadBalancerSourceRanges='{10.10.10.5/32,10.11.10.5/32}'
+    loadBalancerSourceRanges: []
   externalPortHttp: 80
   internalPortHttp: 80
   externalPortHttps: 443
@@ -96,3 +123,10 @@ nginx:
     ##   GKE, AWS & OpenStack)
     ##
     # storageClass: "-"
+  resources:
+    requests:
+      memory: "250Mi"
+      cpu: "100m"
+    limits:
+      memory: "250Mi"
+      cpu: "500m"
