--- a/stable/artifactory/templates/artifactory-deployment.yaml
+++ b/stable/artifactory/templates/artifactory-deployment.yaml
@@ -9,7 +9,7 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
-  replicas: {{ .Values.artReplicaCount }}
+  replicas: {{ .Values.artifactory.replicaCount }}
   template:
     metadata:
       labels:
@@ -17,17 +17,27 @@ spec:
         component: "{{ .Values.artifactory.name }}"
         release: {{ .Release.Name }}
     spec:
+    {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+      - name: {{ .Values.imagePullSecrets }}
+    {{- end }}
       initContainers:
       - name: "remove-lost-found"
         image: "{{ .Values.initContainerImage }}"
         imagePullPolicy: {{ .Values.artifactory.image.pullPolicy }}
         command:
-        - "rm"
-        - "-rf"
-        - "{{ .Values.artifactory.persistence.mountPath }}/lost+found"
+        - 'sh'
+        - '-c'
+        - 'rm -rfv {{ .Values.artifactory.persistence.mountPath }}/lost+found'
         volumeMounts:
         - mountPath: {{ .Values.artifactory.persistence.mountPath | quote }}
           name: artifactory-volume
+      - name: "wait-for-db"
+        image: "{{ .Values.initContainerImage }}"
+        command:
+        - 'sh'
+        - '-c'
+        - 'until nc -z -w 2 {{ template "artifactory.database.name" . }} {{ .Values.database.externalPort }} && echo database ok; do sleep 2; done'
       containers:
       - name: {{ .Values.artifactory.name }}
         image: "{{ .Values.artifactory.image.repository }}:{{ .Values.artifactory.image.version }}"
@@ -44,11 +54,33 @@ spec:
               key: artifactory-database-password
         - name: DB_HOST
           value: {{ template "artifactory.database.name" . }}
+        - name: EXTRA_JAVA_OPTIONS
+          value: "-Xms{{ .Values.artifactory.resources.requests.memory }}g -Xmx{{ .Values.artifactory.resources.limits.memory }}g"
         ports:
         - containerPort: {{ .Values.artifactory.internalPort }}
         volumeMounts:
-        - mountPath: {{ .Values.artifactory.persistence.mountPath | quote }}
-          name: artifactory-volume
+        - name: artifactory-volume
+          mountPath: {{ .Values.artifactory.persistence.mountPath | quote }}
+        resources:
+          requests:
+            memory: "{{ .Values.artifactory.resources.requests.memory }}Gi"
+            cpu: "{{ .Values.artifactory.resources.requests.cpu }}"
+          limits:
+            memory: "{{ .Values.artifactory.resources.limits.memory }}.5Gi"
+            cpu: "{{ .Values.artifactory.resources.limits.cpu }}"
+        readinessProbe:
+          httpGet:
+            path: '/artifactory/webapp/#/login'
+            port: 8081
+          initialDelaySeconds: 60
+          periodSeconds: 10
+          failureThreshold: 10
+        livenessProbe:
+          httpGet:
+            path: '/artifactory/webapp/#/login'
+            port: 8081
+          initialDelaySeconds: 180
+          periodSeconds: 10
       volumes:
       - name: artifactory-volume
       {{- if .Values.artifactory.persistence.enabled }}
