--- a/stable/artifactory/templates/artifactory-service.yaml
+++ b/stable/artifactory/templates/artifactory-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "artifactory.artifactory.name" . }}
+  name: {{ .Values.artifactory.service.name }}
   labels:
     app: {{ template "artifactory.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
