--- a/stable/artifactory/templates/nginx-service.yaml
+++ b/stable/artifactory/templates/nginx-service.yaml
@@ -10,6 +10,13 @@ metadata:
     release: {{ .Release.Name }}
 spec:
   type: {{ .Values.nginx.service.type }}
+{{- if eq .Values.nginx.service.type "LoadBalancer" }}
+  externalTrafficPolicy: Local
+{{- end }}
+{{- if .Values.nginx.service.loadBalancerSourceRanges }}
+  loadBalancerSourceRanges:
+{{ toYaml .Values.nginx.service.loadBalancerSourceRanges | indent 4 }}
+{{- end }}
   ports:
   - port: {{ .Values.nginx.externalPortHttp }}
     targetPort: {{ .Values.nginx.internalPortHttp }}
