--- a/stable/rabbitmq-ha/values.yaml
+++ b/stable/rabbitmq-ha/values.yaml
@@ -17,7 +17,12 @@ rabbitmqVhost: "/"
 ## RabbitMQ Memory high watermark
 ## Ref: http://www.rabbitmq.com/memory.html
 ##
-rabbitmqMemoryHighWatermark: 50MB
+rabbitmqMemoryHighWatermark: 256MB
+
+## EPMD port for peer discovery service used by RabbitMQ nodes and CLI tools
+## Ref: https://www.rabbitmq.com/clustering.html
+##
+rabbitmqEpmdPort: 4369
 
 ## Node port
 rabbitmqNodePort: 5672
@@ -108,6 +113,9 @@ podAntiAffinity: soft
 ##
 customConfigMap: false
 
+## Role Based Access
+## Ref: https://kubernetes.io/docs/admin/authorization/rbac/
+##
 rbac:
   create: true
 
