Adding expected host and port env variables
Turns out the docker container expects a specific environment variable
to be defined, based on the default service name it was given. See https://kubernetes.io/docs/concepts/services-networking/service/#environment-variables.
The workaround is to provide the service hostname as this expected env var

Change-Id: I0a6101f0c9eb398ca08fc78fd37f5b82baed0a05

--- a/stable/redis-ha/templates/redis-master-statefulset.yaml
+++ b/stable/redis-ha/templates/redis-master-statefulset.yaml
@@ -35,6 +35,10 @@ spec:
           resources:
 {{ toYaml .Values.resources.master | indent 12 }}
           env:
+            - name: REDIS_SENTINEL_SERVICE_HOST
+              value: {{ template "sentinel_service_hostname" . }}
+            - name: REDIS_SENTINEL_SERVICE_PORT
+              value: "26379"
             - name: MASTER
               value: "true"
           ports:
@@ -48,6 +52,10 @@ spec:
           resources:
 {{ toYaml .Values.resources.sentinel | indent 12 }}
           env:
+            - name: REDIS_SENTINEL_SERVICE_HOST
+              value: {{ template "sentinel_service_hostname" . }}
+            - name: REDIS_SENTINEL_SERVICE_PORT
+              value: "26379"
             - name: SENTINEL
               value: "true"
           ports:
