--- a/stable/redis-ha/templates/redis-slave-statefulset.yaml
+++ b/stable/redis-ha/templates/redis-slave-statefulset.yaml
@@ -34,6 +34,11 @@ spec:
           volumeMounts:
             - mountPath: /redis-master-data
               name: data
+          env:
+            - name: REDIS_SENTINEL_SERVICE_HOST
+              value: {{ template "sentinel_service_hostname" . }}
+            - name: REDIS_SENTINEL_SERVICE_PORT
+              value: "26379"
       volumes:
       - name: data
       {{- if .Values.persistentVolume.enabled }}
