avoid helm lint errors when adding annotations in a composable chart values.yaml
without this we get a helm lint warning of:
`warning: destination for annotations is a table. Ignoring non-table value <nil>`

--- a/stable/sonatype-nexus/values.yaml
+++ b/stable/sonatype-nexus/values.yaml
@@ -17,7 +17,7 @@ service:
   livenessProbe:
     initialDelaySeconds: 30
     periodSeconds: 30
-  annotations:
+  annotations: {}
   # foo.io/bar: "true"
 ingress:
   enabled: false
