Don't define default values for new settings

--- a/stable/sentry/templates/hooks/db-init.job.yaml
+++ b/stable/sentry/templates/hooks/db-init.job.yaml
@@ -66,6 +66,6 @@ spec:
               name: {{ template "fullname" . }}
               key: smtp-password
         - name: SENTRY_EMAIL_USE_TLS
-          value: {{ default "" .Values.email.use_tls | quote }}
+          value: {{ .Values.email.use_tls | quote }}
         - name: SENTRY_SERVER_EMAIL
-          value: {{ default "" .Values.email.from_address | quote }}
+          value: {{ .Values.email.from_address | quote }}
