--- a/stable/sentry/templates/cron-deployment.yaml
+++ b/stable/sentry/templates/cron-deployment.yaml
@@ -63,8 +63,8 @@ spec:
               name: {{ template "fullname" . }}
               key: smtp-password
         - name: SENTRY_EMAIL_USE_TLS
-          value: {{ default "" .Values.email.use_tls | quote }}
+          value: {{ .Values.email.use_tls | quote }}
         - name: SENTRY_SERVER_EMAIL
-          value: {{ default "" .Values.email.from_address | quote }}
+          value: {{ .Values.email.from_address | quote }}
         resources:
 {{ toYaml .Values.cron.resources | indent 12 }}
