--- a/stable/sentry/templates/web-deployment.yaml
+++ b/stable/sentry/templates/web-deployment.yaml
@@ -62,9 +62,9 @@ spec:
               name: {{ template "fullname" . }}
               key: smtp-password
         - name: SENTRY_EMAIL_USE_TLS
-          value: {{ default "" .Values.email.use_tls | quote }}
+          value: {{ .Values.email.use_tls | quote }}
         - name: SENTRY_SERVER_EMAIL
-          value: {{ default "" .Values.email.from_address | quote }}
+          value: {{ .Values.email.from_address | quote }}
         volumeMounts:
         - mountPath: {{ .Values.persistence.filestore_dir }}
           name: sentry-data
