--- a/incubator/logstash/templates/deployment.yaml
+++ b/incubator/logstash/templates/deployment.yaml
@@ -25,18 +25,27 @@ spec:
               containerPort: {{ $port.containerPort }}
               protocol: {{ $port.protocol }}
     {{- end }}
-          # livenessProbe:
-          #   tcpSocket:
-          #     port: {{ .Values.service.internalPort }}
-          # readinessProbe:
-          #   tcpSocket:
-          #     port: {{ .Values.service.internalPort }}
+          livenessProbe:
+            tcpSocket:
+              port: {{ .Values.service.internalPort }}
+          readinessProbe:
+            tcpSocket:
+              port: {{ .Values.service.internalPort }}
+          env:
+            - name: ELASTICSEARCH_HOST
+              value: {{ .Values.elasticsearchHost | quote }}
+            - name: ELASTICSEARCH_PORT
+              value: {{ .Values.elasticsearchPort | quote }}
+            - name: SYSLOG_PORT
+              value: {{ .Values.service.internalPort | quote }}
           volumeMounts:
             - name: config
               mountPath: /usr/share/logstash/config/logstash.yml
               subPath: logstash.yml
             - name: pipeline
               mountPath: /usr/share/logstash/pipeline
+            - name: patterns
+              mountPath: /usr/share/logstash/patterns
           resources:
 {{ toYaml .Values.resources | indent 12 }}
       volumes:
@@ -46,6 +55,9 @@ spec:
         - name: pipeline
           configMap:
             name: {{ template "logstash.fullname" . }}-pipeline
+        - name: patterns
+          configMap:
+            name: {{ template "logstash.fullname" . }}-patterns
     {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
