--- a/incubator/logstash/templates/patterns-cm.yaml
+++ b/incubator/logstash/templates/patterns-cm.yaml
@@ -2,13 +2,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "logstash.fullname" . }}
+  name: {{ template "logstash.fullname" . }}-patterns
   labels:
     app: {{ template "logstash.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 data:
-  logstash.yml: |-
-    http.host: "0.0.0.0"
-    path.config: /usr/share/logstash/pipeline
+{{- range $key, $value := .Values.patterns }}
+  {{ $key }}: |-
+{{ $value | indent 4 }}
+{{- end }}
