allow adding of extra settings to traefik tolm config

--- a/stable/traefik/templates/configmap.yaml
+++ b/stable/traefik/templates/configmap.yaml
@@ -10,6 +10,7 @@ metadata:
 data:
   traefik.toml: |
     # traefik.toml
+{{ .Values.extraConfig | indent 4 }}
     logLevel = "INFO"
     {{- if .Values.debug.enabled }}
     debug = true
