--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -24,6 +24,8 @@ tolerations: []
   # namespaces:
   # - default
   # labelSelector:
+extraConfig: |
+  # extra configuration from values.yaml
 ssl:
   enabled: false
   enforced: false
