--- a/stable/neo4j/templates/core-statefulset.yaml
+++ b/stable/neo4j/templates/core-statefulset.yaml
@@ -87,7 +87,10 @@ spec:
 {{- if .Values.core.sidecarContainers }}
 {{ toYaml .Values.core.sidecarContainers | indent 6}}
 {{- end }}
-
+{{- if .Values.core.initContainers }}
+      initContainers:
+{{ toYaml .Values.core.initContainers | indent 6}}
+{{- end }}
       volumes:
         - name: plugins
           emptyDir: {}
