--- a/stable/neo4j/values.yaml
+++ b/stable/neo4j/values.yaml
@@ -47,18 +47,34 @@ core:
     ##
     subPath: ""
 
-    ## Pass extra environment variables to the Neo4j container.
-    ##
-    # extraVars:
-    # - name: EXTRA_VAR_1
-    #   value: extra-var-value-1
-    # - name: EXTRA_VAR_2
-    #   value: extra-var-value-2
+  ## Pass extra environment variables to the Neo4j container.
+  ##
+  extraVars:
+  - name: EXTRA_VAR_1
+    value: extra-var-value-1
+  - name: EXTRA_VAR_2
+    value: extra-var-value-2
 
-    sidecarContainers: {}
-    ## Additional containers to be added to the Neo4j core pod.
-    #  - name: my-sidecar
-    #    image: nginx:latest
+  sidecarContainers: {}
+  ## Additional containers to be added to the Neo4j core pod.
+  #  - name: my-sidecar
+  #    image: nginx:latest
+
+  initContainers: {}
+  ## init containers to run before the Neo4j core pod e.g. to install plugins
+
+  # - name: init-plugins
+  #   image: "octoberstorm/ubuntu-with-curl:latest"
+  #   imagePullPolicy: "IfNotPresent"
+  #   volumeMounts:
+  #   - name: plugins
+  #     mountPath: /plugins
+  #   command:
+  #     - "/bin/bash"
+  #     - "-c"
+  #     - |
+  #       curl -L https://github.com/neo4j-contrib/neo4j-apoc-procedures/releases/download/3.2.0.3/apoc-3.2.0.3-all.jar -O
+  #       sudo cp apoc-3.2.0.3-all.jar /plugins/
 
 # Read Replicas
 readReplica:
