--- a/stable/coredns/Chart.yaml
+++ b/stable/coredns/Chart.yaml
@@ -1,5 +1,6 @@
 name: coredns
-version: 1.0.0
+version: 0.8.0
+appVersion: 1.0.1
 description: CoreDNS is a DNS server that chains plugins and provides Kubernetes DNS Services
 keywords:
 - coredns
