Fixed comments * Add release label to the selector * Indent resources values section * Validate extraEnvVars value for not null

--- a/incubator/gocd/templates/gocd-server-deployment.yaml
+++ b/incubator/gocd/templates/gocd-server-deployment.yaml
@@ -38,7 +38,9 @@ spec:
             - name: GO_SERVER_SYSTEM_PROPERTIES
               value: {{ .Values.server.env.goServerSystemProperties }}
             {{- end }}
+            {{- if .Values.server.env.extraEnvVars }}
 {{ toYaml .Values.server.env.extraEnvVars | indent 12 }}
+            {{- end }}
           ports:
             - containerPort: 8153
             - containerPort: 8154
