--- a/stable/concourse/templates/worker-rolebinding.yaml
+++ b/stable/concourse/templates/worker-rolebinding.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.rbac.create -}}
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: rbac.authorization.k8s.io/{{ .Values.rbac.apiVersion }}
 kind: RoleBinding
 metadata:
   name: {{ template "concourse.worker.fullname" . }}
