--- a/incubator/logstash/values.yaml
+++ b/incubator/logstash/values.yaml
@@ -49,7 +49,7 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 
-elasticsearch
+elasticsearch:
   host: "elasticsearch-client.default.svc.cluster.local"
   port: 9200
 
