many fixes from @unguiculus

--- a/incubator/bitcoincashd/templates/pvc.yaml
+++ b/incubator/bitcoincashd/templates/pvc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: {{ template "bitcoincashd.fullname" . }}
   labels:
-    app: {{ template "bitcoincashd.fullname" . }}
+    app: {{ template "bitcoincashd.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
