--- a/incubator/bitcoincashd/Chart.yaml
+++ b/incubator/bitcoincashd/Chart.yaml
@@ -1,5 +1,6 @@
 name: bitcoincashd
 version: 0.1.0
+appVersion: 0.16.1.0
 description: Bitcoin Cash is Peer-to-Peer Electronic Cash
 keywords:
 - bitcoincashd
@@ -11,6 +12,6 @@ sources:
 - https://github.com/kubernetes/charts
 - https://github.com/kuberstack/bitcoincashd
 maintainers:
-- name: Daniel Yavorovych
+- name: daniel-yavorovich
   email: daniel@arilot.com
 engine: gotpl
