--- a/incubator/bitcoincashd/templates/configmap.yaml
+++ b/incubator/bitcoincashd/templates/configmap.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "bitcoincashd.fullname" . }}
+  labels:
+{{ include "bitcoincashd.labels.standard" . | indent 4 }}
 data:
 {{- range $key, $val := .Values.configurationFiles }}
   {{ $key }}: |-
