--- a/incubator/geth/Chart.yaml
+++ b/incubator/geth/Chart.yaml
@@ -1,5 +1,6 @@
 name: geth
 version: 0.1.0
+appVersion: 1.7.3
 description: Official Go implementation of the Ethereum protocol
 keywords:
 - geth
@@ -11,6 +12,6 @@ sources:
 - https://github.com/kubernetes/charts
 - https://github.com/ethereum/go-ethereum
 maintainers:
-- name: Daniel Yavorovych
+- name: daniel-yavorovich
   email: daniel@arilot.com
 engine: gotpl
