--- a/incubator/zcashd/Chart.yaml
+++ b/incubator/zcashd/Chart.yaml
@@ -1,5 +1,6 @@
 name: zcashd
 version: 0.1.0
+appVersion: 1.0.12
 description: Zcash is the first open, permissionless cryptocurrency that can fully protect the privacy of transactions using zero-knowledge cryptography.
 keywords:
 - zcashd
@@ -11,6 +12,6 @@ sources:
 - https://github.com/kubernetes/charts
 - https://github.com/kuberstack/zcashd
 maintainers:
-- name: Daniel Yavorovych
+- name: daniel-yavorovich
   email: daniel@arilot.com
 engine: gotpl
