--- a/incubator/zcashd/templates/configmap.yaml
+++ b/incubator/zcashd/templates/configmap.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "zcashd.fullname" . }}
+  labels:
+{{ include "zcashd.labels.standard" . | indent 4 }}
 data:
 {{- range $key, $val := .Values.configurationFiles }}
   {{ $key }}: |-
