--- a/incubator/zcashd/templates/pvc.yaml
+++ b/incubator/zcashd/templates/pvc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: {{ template "zcashd.fullname" . }}
   labels:
-    app: {{ template "zcashd.fullname" . }}
+    app: {{ template "zcashd.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
