Added new version of chartmuseum

--- a/incubator/chartmuseum/Chart.yaml
+++ b/incubator/chartmuseum/Chart.yaml
@@ -8,3 +8,5 @@ icon: https://raw.githubusercontent.com/chartmuseum/chartmuseum/master/logo.png
 maintainers:
 - name: ChartMuseum
   email: chartmuseum@gmail.com
+- name: Cloud Posse
+  email: hello@cloudposse.com
