--- a/incubator/chartmuseum/templates/service.yaml
+++ b/incubator/chartmuseum/templates/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "common.fullname" . }}
+  annotations:
+{{ toYaml .Values.service.annotations | indent 4 }}
   labels:
 {{ include "common.labels.standard" . | indent 4 }}
 spec:
