[stable/traefik] Allow enforcing SSL without having SSL enabled in Traefik itself (#2778)
* Allow to enforce SSL without having SSL enabled

* Bump Traefik Chart version to 1.4.3

* Always use regex redirect for enforcing SSL

--- a/stable/traefik/templates/configmap.yaml
+++ b/stable/traefik/templates/configmap.yaml
@@ -23,9 +23,10 @@ data:
       [entryPoints.http]
       address = ":80"
       compress = {{ .Values.gzip.enabled }}
-        {{- if and .Values.ssl.enabled .Values.ssl.enforced }}
+        {{- if .Values.ssl.enforced }}
         [entryPoints.http.redirect]
-          entryPoint = "https"
+          regex = "^http://(.*)"
+          replacement = "https://$1"
         {{- end }}
       {{- if .Values.ssl.enabled }}
       [entryPoints.https]
