--- a/stable/postgresql/values.yaml
+++ b/stable/postgresql/values.yaml
@@ -52,6 +52,8 @@ persistence:
   size: 8Gi
   subPath: "postgresql-db"
 
+  # annotations: {}
+
 metrics:
   enabled: false
   image: wrouesnel/postgres_exporter
