Fixed to default affinity as empty hash

--- a/incubator/zookeeper/values.yaml
+++ b/incubator/zookeeper/values.yaml
@@ -31,16 +31,17 @@ security:
   enabled: false
   runAsUser: 1000
   fsGroup: 1000
-## Affinities to add to the worker pods.
-## Useful if you prefer to run workers on non-spot instances, for example
-##
-# affinity:
-#   nodeAffinity:
-#     preferredDuringSchedulingIgnoredDuringExecution:
-#       - weight: 50
-#         preference:
-#           matchExpressions:
-#             - key: spot
-#               operator: NotIn
-#               values:
-#                 - "true"
+
+
+# Affinities to add to the worker pods.
+# Useful if you prefer to run workers on non-spot instances, for example
+affinity: {}
+# nodeAffinity:
+#   preferredDuringSchedulingIgnoredDuringExecution:
+#     - weight: 50
+#       preference:
+#         matchExpressions:
+#           - key: spot
+#             operator: NotIn
+#             values:
+#               - "true"
